tests/cases/fail/while_string_condition.cs
class Program { static void Main() { while ("x") { Console.WriteLine(1); } } }
